3 commit fix err overflow-y

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -22,5 +22,4 @@
 	background-color: #fff;
 	border-radius: 10px;
 	width: 960px;
-	overflow-y: scroll;
 }
